--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "datomatic/laravel-enum-helper": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/prompts": "^0.1.13",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "spatie/laravel-json-api-paginate": "^1.13",
