ADD composer script to generate OpenAPI documentation

--- a/composer.json
+++ b/composer.json
@@ -43,13 +43,17 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@generate-api-docs"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "generate-api-docs": [
+            "@php artisan openapi:generate > public/openapi.json"
         ]
     },
     "extra": {
