--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "laravel/prompts": "^0.1.13",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-data": "^3.9",
         "spatie/laravel-json-api-paginate": "^1.13",
         "spatie/laravel-query-builder": "^5.6",
+        "spatie/laravel-sluggable": "*",
         "vyuldashev/laravel-openapi": "^1.11"
     },
     "require-dev": {
